samples/_failures_safe/1761439067_5691b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_004e74ba.c: In function ‘main’:
./samples/SAFE/__tmp_004e74ba.c:156:16: error: missing terminating " character
  156 |         printf("2. Multiply matrices\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_004e74ba.c:156:9: error: expected expression at end of input
  156 |         printf("2. Multiply matrices\n
      |         ^~~~~~
./samples/SAFE/__tmp_004e74ba.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_004e74ba.c:156:9: error: expected declaration or statement at end of input
